<resources>
    <string name="app_name">BabyFace</string>

    <string name="welcome_to">Welcome to</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string name="add_album">Add album</string>

    <string name="enter_album_name">How do you want to call your album?</string>
    <string name="example_album_name"><i>e.g. "Our little toddler"</i></string>
    <string name="take_first_photo">Take your first photo!</string>
    <string name="reminder_title">How often would you like to take a photo?</string>
    <string name="never">Never</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="custom">Custom …</string>
    <string name="every">Every</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="all_done">All done!</string>
    <string name="added_new_face">We\'ll remind you when it\'s time to take another photo. For now just sit back and relax.</string>

    <string name="not_operational_title">Unable to process image</string>
    <string name="not_operational_msg">The image processing component for this app has not yet been downloaded. Until it becomes available BabyFace will be unable to auto process your images. We are sorry :(</string>

    <string name="photo_time">Photo time</string>
    <string name="time_to_take_photo">Time to take a photo of %1$s!</string>
    <string name="take_photo">Take photo</string>

    <string name="albums">Albums</string>
    <string name="videos">videos</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>

    <string name="address">ideas@faudroids.org</string>
    <string name="feedback_mail_subject">Feedback Babyface</string>
    <string name="feedback_mail_chooser">Choose Mail</string>

    <string name="take_landscape_photos">Take photos in landscape mode</string>
    <string name="version">Version</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="about_content">
        This app was developed as part of the Android Challenge: one app every month for one year
        (think of it as a New Year\'s resolution). BabyFace is our project for August.&lt;br/&gt;
        &lt;br/&gt;
        If you want to know more, be sure to check out our &lt;a href=&quot;http://faudroids.org&quot;&gt;website&lt;/a&gt;.
        This app is &lt;b&gt;open source&lt;/b&gt; and you can find everything on &lt;a href=&quot;https://github.com/FauDroids/BabyFace&quot;&gt;GitHub&lt;/a&gt;.&lt;br/&gt;
        &lt;br/&gt;
        We would love to hear from you! Send us an &lt;a href=&quot;mailto:ideas@faudroids.org&quot;&gt;email&lt;/a&gt; and let us know what you think!&lt;br/&gt;
        &lt;br/&gt;
        Happy coding!
    </string>
    <string name="credits">Credits</string>
    <string name="credits_content">
        This app is being powered by a number of small and large &lt;b&gt;open source projects&lt;/b&gt;,
        which all together have made this project happen. We couldn\'t have done this without them.
        To those fellow developers out there spending their part time creating those libraries:
        you guys are awesome, keep on rocking!&lt;br&gt;
        &lt;br&gt;
        The libraries in use are:&lt;br&gt;
        &lt;br&gt;
        &lt;a href=&quot;https://github.com/JakeWharton/timber&quot;&gt;Timber&lt;/a&gt; by Jake Wharton&lt;br&gt;
        &lt;a href=&quot;https://github.com/roboguice/roboguice&quot;&gt;RoboGuice&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;https://github.com/mikepenz/MaterialDrawer&quot;&gt;MaterialDrawer&lt;/a&gt; by Mike Penz&lt;br&gt;
        &lt;a href=&quot;https://github.com/square/retrofit&quot;&gt;Retrofit&lt;/a&gt; by Square&lt;br&gt;
        &lt;a href=&quot;https://github.com/square/picasso&quot;&gt;Picasso&lt;/a&gt; by Square&lt;br&gt;
        &lt;a href=&quot;https://github.com/ReactiveX/RxJava&quot;&gt;RxJava&lt;/a&gt; by Reactivex&lt;br&gt;
        &lt;a href=&quot;https://github.com/ReactiveX/RxAndroid&quot;&gt;RxAndroid&lt;/a&gt; by Reactivex&lt;br&gt;
        &lt;a href=&quot;https://github.com/johncarl81/parceler&quot;&gt;Parceler&lt;/a&gt; by John Ericksen&lt;br&gt;
        &lt;a href=&quot;https://github.com/lsjwzh/MaterialLoadingProgressBar&quot;&gt;MaterialLoadingProgressBar&lt;/a&gt; by lsjwzh&lt;br&gt;
        &lt;a href=&quot;https://github.com/google/material-design-icons&quot;&gt;Material Design Icons&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://source.android.com/&quot;&gt;Android Open Source Project&lt;/a&gt; by Google Inc. and the Open Handset Alliance&lt;br&gt;
        &lt;br&gt;
        Thanks everyone!
    </string>

    <string name="share_title">Share via</string>
    <string name="share_message">Hey, check out %1$s, a simple way to create videos of how your kids are growing up https://play.google.com/store/apps/details?id=org.faudroids.babyface</string>

    <string name="logout">Logout</string>
    <string name="settings_quick_message">Made by a small team of night time coders in Erlangen, Germany\nThanks for your support!</string>

    <string name="name">Name</string>
    <string name="reminder_every">Reminder every</string>
    <string name="delete">Delete</string>
    <string name="delete_title">"Delete %1$s"</string>
    <string name="delete_message">"Do you want to delete all photo and information of %1$s? This action is <b>not</b> reversible!</string>

    <string name="import_title">Import albums?</string>
    <string name="import_message">Hurrah, we have found photos of %1$d albums which you were using on a different device! Do you want to import those now?</string>
    <string name="import_confirm">Import</string>

    <string name="import_from_drive">Import from Google Drive</string>
    <string name="nothing_to_import">Nothing to import</string>

    <string name="video_conversion_progress_zero">0 % complete</string>
    <string name="video_conversion_progress">%1$d %% complete</string>
    <string name="video_conversion_error">Sorry, but there was an error converting your video :(</string>
    <string name="creating_video">Creating video</string>
    <string name="tap_for_details">Tap for details</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="creating_video_please_wait">Your video is being created for you, hang in tight!</string>
    <string name="creating_video_finished">All done, enjoy the show!</string>
    <string name="show_video">Show video</string>

    <string name="delete_photo_title">Delete photo?</string>
    <string name="delete_photo_msg">Are you sure you want to delete this photo?</string>

    <string name="stop_showing_this">Stop showing this?</string>
    <string name="rotate_device">Please rotate your device</string>
    <string name="disable_landscape_title">Disable landscape mode?</string>
    <string name="disable_landscape_msg">Taking pictures in landscape mode will increase the quality of your video. Do you want to turn off this reminder now?</string>
    <string name="turn_off">Turn off</string>

    <string name="photo_import_title">Importing photos</string>
    <string name="photo_import_msg">Downloading previously created photos, this might take a while …</string>
    <string name="photo_import_msg_done">All done, ready to take some new photos!</string>
    <string name="photo_import_msg_error">Sorry, there was an error importing your photos :( You can try again any time by choosing import from the settings menu.</string>
    <string name="photo_import_continue">Let\'s go!</string>
    <string name="photo_import_status">Importing %1$d of %2$d albums</string>
    <string name="show_videos">Show videos</string>
    <string name="create_video">Create video</string>
    <string name="show_photos">Show photos</string>

    <string name="error_delete_face_title">Failed to delete album</string>
    <string name="error_delete_face_msg">Sorry, there  was an error deleting this album. Please try again later.</string>

    <string name="error_setup_drive_title">Failed to setup Google Drive</string>
    <string name="error_setup_drive_msg">Sorry, there was an error while setting up Google Drive, backups might not work reliably. Please try logging out and in again.</string>

    <string name="error_adding_face_title">Failed create new album</string>
    <string name="error_adding_face_msg">Sorry, there was an error creating your new album :(</string>

    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
</resources>
