<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txt_title"
        android:text="@string/reminder_title"
        style="@style/TextIntroTitle"
        />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        >

        <TableLayout
            android:id="@+id/layout_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:visibility="visible"
            android:layout_centerInParent="true"
            >

            <TableRow
                android:id="@+id/row_1"
                style="@style/RowReminder"
                >

                <TextView
                    style="@style/TextIntroReminder"
                    android:text="@string/never"
                    />

                <ImageView style="@style/ImageIntroReminder"/>
            </TableRow>

            <TableRow
                android:id="@+id/row_2"
                style="@style/RowReminder"
                >

                <TextView
                    style="@style/TextIntroReminder"
                    android:text="@string/every_day"
                    />

                <ImageView style="@style/ImageIntroReminder"/>
            </TableRow>

            <TableRow
                android:id="@+id/row_3"
                style="@style/RowReminder"
                >

                <TextView
                    style="@style/TextIntroReminder"
                    android:text="@string/every_week"
                    />

                <ImageView style="@style/ImageIntroReminder"/>
            </TableRow>

            <TableRow
                android:id="@+id/row_4"
                style="@style/RowReminder"
                >

                <TextView
                    style="@style/TextIntroReminder"
                    android:text="@string/every_month"
                    />

                <ImageView style="@style/ImageIntroReminder"/>
            </TableRow>

            <TableRow
                android:id="@+id/row_5"
                style="@style/RowReminder"
                >

                <TextView
                    style="@style/TextIntroReminder"
                    android:text="@string/custom"
                    />

                <ImageView style="@style/ImageIntroReminder"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/layout_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_centerInParent="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/TextIntroReminder"
                    android:text="@string/every"
                    />

                <EditText
                    android:id="@+id/edit_amount"
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/transparent"
                    android:inputType="numberDecimal"
                    android:paddingBottom="@dimen/reminder_vertical_padding"
                    android:paddingTop="@dimen/reminder_vertical_padding"
                    android:text="2"
                    />

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                >

                <TableRow
                    android:id="@+id/row_hours"
                    style="@style/RowReminder"
                    >

                    <TextView
                        style="@style/TextIntroReminder"
                        android:text="@string/hours"
                        />

                    <ImageView style="@style/ImageIntroReminder"/>
                </TableRow>

                <TableRow
                    android:id="@+id/row_days"
                    style="@style/RowReminder"
                    >

                    <TextView
                        style="@style/TextIntroReminder"
                        android:text="@string/days"
                        />

                    <ImageView style="@style/ImageIntroReminder"/>
                </TableRow>

                <TableRow
                    android:id="@+id/row_weeks"
                    style="@style/RowReminder"
                    >

                    <TextView
                        style="@style/TextIntroReminder"
                        android:text="@string/weeks"
                        />

                    <ImageView style="@style/ImageIntroReminder"/>
                </TableRow>

                <TableRow
                    android:id="@+id/row_months"
                    style="@style/RowReminder"
                    >

                    <TextView
                        style="@style/TextIntroReminder"
                        android:text="@string/months"
                        />

                    <ImageView style="@style/ImageIntroReminder"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>