<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/img_clouds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/background_clouds"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_clouds"
        android:background="@android:color/white"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/layout_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/profile_image_size_large"
            android:layout_height="@dimen/profile_image_size_large"
            android:layout_margin="@dimen/photo_frame_size"
            android:background="@color/gray_light"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_profile"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/layout_take_photo"
            style="@style/LayoutAction"
            >

            <ImageView
                style="@style/ImageAction"
                android:src="@drawable/ic_photo_camera"
                />

            <TextView
                style="@style/TextAction"
                android:text="@string/take_photo"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_show_photos"
            style="@style/LayoutAction"
            >

            <ImageView
                style="@style/ImageAction"
                android:src="@drawable/ic_photo"
                />

            <TextView
                style="@style/TextAction"
                android:text="@string/show_photos"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_create_movie"
            style="@style/LayoutAction"
            >

            <ImageView
                style="@style/ImageAction"
                android:src="@drawable/ic_movie"
                />

            <TextView
                style="@style/TextAction"
                android:text="@string/create_video"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_show_movies"
            style="@style/LayoutAction"
            >

            <ImageView
                style="@style/ImageAction"
                android:src="@drawable/ic_movies"
                />

            <TextView
                style="@style/TextAction"
                android:text="@string/show_videos"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_settings"
            style="@style/LayoutAction"
            >

            <ImageView
                style="@style/ImageAction"
                android:src="@drawable/ic_settings"
                />

            <TextView
                style="@style/TextAction"
                android:text="@string/settings"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
