<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:text="@string/name"
            style="@style/FaceSettingsItemTitle"
            />

        <TextView
            android:id="@+id/txt_name"
            android:text="Bobby"
            style="@style/FaceSettingsItemValue"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <RelativeLayout
        android:id="@+id/layout_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:text="@string/reminder_every"
            style="@style/FaceSettingsItemTitle"
            />

        <TextView
            android:id="@+id/txt_reminder_period"
            android:text="4 hours"
            style="@style/FaceSettingsItemValue"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:background="@drawable/selector_red"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        />
    </LinearLayout>

    <include layout="@layout/progressbar"/>

</RelativeLayout>
