<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    >

    <ImageView
        android:id="@+id/img_teddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/intro"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        />

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/img_teddy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="46sp"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/background_clouds"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_google_red"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:padding="8dp"
            />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/google_red_dark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            />

    </LinearLayout>

</RelativeLayout>
