<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    >

    <RelativeLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="140dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/photo_import_title"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="50dp"
                style="@style/TextIntroTitle"
                />

            <TextView
                android:id="@+id/txt_msg"
                android:text="@string/photo_import_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                />

            <LinearLayout
                android:id="@+id/layout_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="visible"
                >

                <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
                    android:layout_width="@dimen/progress_small"
                    android:layout_height="@dimen/progress_small"
                    android:layout_marginRight="10dp"
                    app:mlpb_enable_circle_background="false"
                    app:mlpb_progress_color="@color/accent"
                    />

                <TextView
                    android:id="@+id/txt_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-light"
                    android:text="Importing"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_done"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_import_continue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_accent"
                />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:scaleType="fitEnd"
            android:src="@drawable/background_clouds"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@android:color/white"
            />

    </LinearLayout>

</RelativeLayout>